Prevent x scrolling on ios

--- a/main.css
+++ b/main.css
@@ -1,5 +1,13 @@
-html {
-    overflow-y: hidden;
+html, body, .expand {
+    overflow-x: hidden;
+}
+
+.expand {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 * {
